tests/expected_errors/constructor_move_errors.err
[    INFO] --- Starting compilation of tests/sources/invalid/constructor_move_errors.fire...
[   ERROR] --- Use-after-move error: variable 's1' was moved, cannot use it here
> println(s1); // Error: used after move
          ^
(tests/sources/invalid/constructor_move_errors.fire:15:9)
[   ERROR] --- Use-after-move error: variable 's2' was moved, cannot use it here
> println(s2); // Error: used after move
          ^
(tests/sources/invalid/constructor_move_errors.fire:19:9)
[   ERROR] --- Semantic analysis failed with 2 errors
